Idiomas y modo oscuro añadidos